--- a/Notebooks/1-Datasets.ipynb
+++ b/Notebooks/1-Datasets.ipynb
@@ -7,16 +7,16 @@
    "source": [
     "# Datasets\n",
     "\n",
-    "Four datasets are available in `nlreg1d`:\n",
+    "Four CSV datasets are available in `nlreg1d`:\n",
     "\n",
     "- `SimulatedA`\n",
     "- `SimulatedB`\n",
     "- `Besier2009VastusForce`  (Besier et al., 2009)\n",
     "- `Pataky2014MediolateralCOP`  (Pataky et al., 2014)\n",
     "\n",
-    "The CSV files associated with these datasets are available in the `Datasets` directory of this repository.\n",
+    "The CSV files associated with these datasets are available in the `Data` directory of this repository. Note that **the first column of each CSV file contains group integer labels**; the remaining columns contain the 1D dependent variable.\n",
     "\n",
-    "They can be loaded and visualized conveniently as follows:"
+    "They can most conveniently be loaded and visualized as follows:"
    ]
   },
   {
